--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "postcss": "^7.0.23",
     "tailwindcss": "^1.1.4",
-    "vue": "^2.5.22"
+    "vue": "^2.5.22",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.6.0",
