--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
     "postcss": "^7.0.23",
     "tailwindcss": "^1.1.4",
     "vue": "^2.5.22",
